--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 @model List<BridgeModel>
 
-<h1>Liste des stations</h1>
+<h1>Prochaine fermeture</h1>
 
 <ul>
     @foreach (var Bridges in Model)
